--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/fiber": "^9.4.2",
-    "react": "^19.2.3",
-    "@react-three/drei": "^10.7.7",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "react-router-dom": "^7.11.0",
-    "recharts": "^3.6.0",
-    "three": "^0.182.0",
-    "framer-motion": "^12.23.26",
-    "@google/genai": "^1.34.0"
+    "@google/genai": "^0.1.1",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.16",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "recharts": "^2.12.2",
+    "three": "^0.160.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@types/three": "^0.160.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.6"
   }
 }
