fix(deps): Update dependencies and button disabled state
Updates package.json and index.html to fetch the latest versions of various libraries via ESM.

Additionally, modifies the Button component to support a `disabled` prop, enhancing user interaction control and visual feedback for disabled states.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.1.1",
+    "@google/genai": "latest",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.16",
     "framer-motion": "^11.0.8",
